# KaasChat

./: README.md  README_zh-Hans.md  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/goose-extension/: Cargo.toml  README.md
src-tauri/goose-extension/src/: config.rs  lib.rs  mcp.rs
src-tauri/mcp-client/: Cargo.toml
src-tauri/mcp-client/src/transport/: stdio.rs
src-tauri/src/: commands.rs  init.rs  lib.rs  main.rs  state.rs
src-tauri/src/services/: cache.rs
src-tauri/src/services/llm/: chat.rs  client.rs
src-tauri/src/services/llm/providers/: types.rs
src/components/: PromptInput.tsx  ToolsDialog.tsx
src/i18n/locales/en/: generic.json  page-conversation.json
src/i18n/locales/zh-Hans/: generic.json  page-conversation.json
src/lib/: cache.ts  commands.ts  types.ts
src/pages/: Dependencies.tsx
